@@ -54,6 +54,7 @@
     not allowed by RFC 2109 but does appear in RFC 2965.  GH #86
   * file URIs are now read in binary mode.  GH #83
   * Content-Encoding: x-gzip is now treated like gzip per RFC 2616.
+  * Mechanize now unescapes URIs for meta refresh.  GH #68
 
 === 1.0.0
 
